--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>cn.clown</groupId>
     <artifactId>Learning-Leetcode</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+        </dependency>
+    </dependencies>
 
 </project>
